# MVD

./: .gitignore  README.md  auto_train.sh  clean.sh  experiment.sh  filter.sh  gso_val.py  infer.py  loss_mismatch.md  pyproject.toml  run.py  run.sh  train.py  train.sh  val.py  val.sh  validate_cross_attention.py
.cursor/rules/: mvd.mdc
config/: train_config.yaml  train_config2.yaml  train_config_all.yaml
config_example/: train_config.yaml
imgs/: 000.txt  002.txt  003.txt  004.txt
src/: dataset.py  load_co3d.py  losses.py  mvd.py  training.py  utils.py  validation.py  vis_co3d.py
src/data/: analyze_objaverse.py  objaverse_dataset.py  objaverse_eda_results.csv  objaverse_report.py
src/data/cleaning/: filter_by_contrast.py  main.py  move_unfiltered.py
src/data/eda/: analyze_objaverse.py  objaverse_report.py
src/data/rendering/: blender_script.py  example-objects.json  main.py  render_gso.py  render_objaverse.sh
src/datasets/: download_gso.sh  download_objaverse.py  download_objaverse.sh  load_co3d.py  objaverse_dataset.py  objaverse_example.py
src/datasets/downloaders/: download_gso.py  download_omniobject.py
src/datasets/rendering/: blender_script.py  main.py  render_objaverse.sh
src/models/: attention.py  camera_encoder.py  image_encoder.py  mvd_unet.py  pipeline.py
src/training/: losses.py  scheduler.py  training.py
