[project]
name = "mvd"
version = "0.1.0"
description = "Multi-View Diffusion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.3.0",
    "bpy>=4.0.0",
    "colorama>=0.4.6",
    "diffusers>=0.32.2",
    "fire>=0.7.0",
    "hydra-core>=1.3.2",
    "icecream>=2.1.4",
    "kornia>=0.8.0",
    "lightning>=2.5.0.post0",
    "mathutils>=3.3.0",
    "numpy>=2.2.3",
    "objaverse>=0.1.7",
    "open3d>=0.19.0",
    "openxlab>=0.0.11",
    "oss2>=2.19.1",
    "pillow>=11.1.0",
    "pytorch-lightning>=2.5.0.post0",
    "pytorch-msssim>=1.0.0",
    "rich>=13.9.4",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.3",
    "wandb>=0.19.6",
]
